; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/pcbit/extr_layer2.c_pcbit_fake_conf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/pcbit/extr_layer2.c_pcbit_fake_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcbit_dev = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 (%struct.TYPE_5__*)* }
%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.pcbit_chan = type { i32, i64 }

@ISDN_STAT_BSENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pcbit_dev*, %struct.pcbit_chan*)* @pcbit_fake_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcbit_fake_conf(%struct.pcbit_dev* %0, %struct.pcbit_chan* %1) #0 {
  %3 = alloca %struct.pcbit_dev*, align 8
  %4 = alloca %struct.pcbit_chan*, align 8
  %5 = alloca %struct.TYPE_5__, align 4
  store %struct.pcbit_dev* %0, %struct.pcbit_dev** %3, align 8
  store %struct.pcbit_chan* %1, %struct.pcbit_chan** %4, align 8
  %6 = load %struct.pcbit_chan*, %struct.pcbit_chan** %4, align 8
  %7 = getelementptr inbounds %struct.pcbit_chan, %struct.pcbit_chan* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %31

10:                                               ; preds = %2
  %11 = load %struct.pcbit_chan*, %struct.pcbit_chan** %4, align 8
  %12 = getelementptr inbounds %struct.pcbit_chan, %struct.pcbit_chan* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = add nsw i64 %13, -1
  store i64 %14, i64* %12, align 8
  %15 = load %struct.pcbit_dev*, %struct.pcbit_dev** %3, align 8
  %16 = getelementptr inbounds %struct.pcbit_dev, %struct.pcbit_dev* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 2
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* @ISDN_STAT_BSENT, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  store i32 %19, i32* %20, align 4
  %21 = load %struct.pcbit_chan*, %struct.pcbit_chan** %4, align 8
  %22 = getelementptr inbounds %struct.pcbit_chan, %struct.pcbit_chan* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  store i32 %23, i32* %24, align 4
  %25 = load %struct.pcbit_dev*, %struct.pcbit_dev** %3, align 8
  %26 = getelementptr inbounds %struct.pcbit_dev, %struct.pcbit_dev* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %28, align 8
  %30 = call i32 %29(%struct.TYPE_5__* %5)
  br label %31

31:                                               ; preds = %10, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
